# semantik

./: .dockerignore  .env.cpu  .env.docker.example  .env.env.backup  .env.example  .gitignore  AGENTS.md  ANALYSIS_SUMMARY.md  API_ENDPOINT_COMPARISON.md  API_REFERENCE.md  API_TEST_REPORT.md  AUDIT_DETAILED_FINDINGS.md  AUDIT_INDEX.md  AUDIT_README.txt  AUDIT_SUMMARY.txt  BACKEND_ARCHITECTURE_SPECIFICATION.md  BUG-721-investigation-notes.md  CELERY_SETUP.md  CELERY_TASK_IMPLEMENTATION.md  CELERY_WEBSOCKET_TEST_FIXES.md  CHANGELOG.md  CHUNKING_API_IMPLEMENTATION.md  CHUNKING_IMPLEMENTATION_TICKETS.md  CHUNKING_IMPROVEMENT_TICKETS.md  CHUNKING_VALIDATION_REPORT.md  CI_CD_IMPROVEMENT_PLAN.md  CI_TEST_FIXES.md  CLAUDE.md  CLAUDE_DOCKER.md  CODEBASE_REVIEW.md  CODE_AUDIT_REPORT.md  CODE_REVIEW_FIXES_APPLIED.md  CODE_REVIEW_PROGRESS.md  CODE_REVIEW_REPORT.md  COLLECTIONS_REFACTOR_EXECUTION_PLAN.md  COLLECTIONS_REFACTOR_MASTER_TASK_LIST.md  COLLECTION_MANAGER_IMPLEMENTATION.md  CONFIGURATION.md  CONFIG_AUDIT_REPORT.md  CONSOLIDATION_SUMMARY.md  (+231 more)
.github/: PULL_REQUEST_PERMISSIONS.md
.serena/: project.yml
alembic/: CLAUDE.md  README_TIMESTAMP_MIGRATION.md  env.py
archive/: CELERY_SETUP.md  CODE_QUALITY_ASSESSMENT.md  CODE_REVIEW_RESPONSE.md  COLLECTION_MANAGER_IMPLEMENTATION.md  CONCURRENCY_ISSUES.md  CORE-002_PLAN.md  CORE_003_FINAL_COMMIT_MESSAGE.md  CORE_003_TEST_SUMMARY.md  DEPENDENCY_ANALYSIS.md  DEV_LOG.md  INT8_RELEASE_NOTES.md  MIGRATION.md  NOTES_FOR_CORE_003.md  PLAN.md  QUEUE_REFACTORING_PLAN.md  QUICKFIX.md  REDIS_PUBSUB_DESIGN.md  RERANKING_DEV_LOG.md  REVIEW_API_CONTRACTS.md  REVIEW_CONFIGURATION.md  REVIEW_DATABASE_ACCESS.md  REVIEW_DOCKER_INFRASTRUCTURE.md  REVIEW_SERVICE_BOUNDARIES.md  REVIEW_SHARED_PACKAGE.md  TEST_101_DEV_LOG.md  TEST_101_PLAN.md  TEST_102_SUMMARY.md  TEST_COVERAGE_PLAN.md  TUI_DEV_LOG.md  TUI_PLAN.md
chunking-fix-tickets/: ORCHESTRATOR-MASTER.md  ORCHESTRATOR_AGENT_INSTRUCTIONS.md  README.md
chunking-implementation/: ORCHESTRATOR_AGENT_PROMPT.md  ORCHESTRATOR_MASTER_GUIDE.md  README.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
deploy/: config.env.example  haproxy.cfg
docs/: .CODEBASE_REVIEW.md.kate-swp  API_ARCHITECTURE.md  API_REFERENCE.md  ARCH.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_REVIEW.md  BENCHMARKING.md  BENCHMARKS_API.md  CHANGELOG_DOCS.md  CHUNKING_API.md  CHUNKING_FEATURE_OVERVIEW.md  CHUNKING_IMPLEMENTATION_PLAN.md  CHUNKING_IMPLEMENTATION_PLAN_IMPROVED.md  CHUNKING_PLUGINS.md  CHUNKING_STRATEGIES.md  CODE_REVIEW_REPORT.md  COLLECTIONS.md  COLLECTION_MANAGEMENT.md  CONFIGURATION.md  CONNECTORS.md  CONNECTOR_MIGRATION.md  DATABASE_ARCH.md  DATA_ACCESS_CATALOG.md  DB-003-IMPLEMENTATION.md  DEPENDENCY_ANALYSIS.md  DEPLOYMENT.md  DOCKER.md  DOCUMENTATION_INDEX.md  EMBEDDING_CONTEXT_MANAGERS.md  EMBEDDING_PLUGINS.md  EMBEDDING_VISUALIZATION.md  FRONTEND_ARCH.md  HEALTH_MONITORING.md  INFRASTRUCTURE.md  LOCAL_LLM.md  MCP.md  MEMORY_MANAGEMENT.md  MIGRATION_GUIDE.md  PARSERS.md  PLUGIN_DEVELOPMENT.md  (+30 more)
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
manual_tests/: README.md  embedding_full_integration_suite.py  frontend_api_test_suite.py  metrics_probe.py  metrics_update_probe.py  test_embedding_oom_handling.py  websocket_performance_probe.py  websocket_reindex_probe.py
portfolio-prep/: README_REWRITE_BRIEF.md
reference/: atlas_guide.txt
reports/: 2026-01-13_branch-review_0.8.0-settings-page_vs_v0.8.0.md
scripts/: backfill_doc_ids.py  backup_before_migration.py  benchmark_qwen3.py  build.sh  build_manifest.sh  bump_version.py  check_collection_status.py  check_operations.py  check_vecpipe_status.py  cleanup_old_job_collections.py  cleanup_temp_images.py  create_superuser.py  create_test_user.py  debug_memory_usage.py  dev-local.sh  dev.sh  doc_lint.py  download-models.sh  fix-permissions.sh  generate_jwt_secret.py  generate_secrets_key.py  install_uv.sh  manual_embed_collection.py  migrate-ci.sh  partition_health_check_example.py  partition_maintenance.py  phase1_quick_check.sh  phase1_validation.py  phase1_validation_dry_run.py  reset_test_db.py  test-bitsandbytes-docker.sh  test-bitsandbytes.py  test-compiler-fix.sh  test-frontend.sh  test-int8-fix.py  test-int8-standard-build.sh  test_ci_performance.sh  test_cleanup_service.py  test_hybrid_search.py  test_partition_key_migration.py  (+5 more)
shared/: __init__.py
temp_import_test/: __init__.py  foo.py
test_data/: test_presentation.pptx
tests/: AUTHENTICATION_FIXTURES_GUIDE.md  CLAUDE.md  README.md  README_RERANKING_TESTS.md  ci_test_wrapper.py  conftest.py  embedding_performance_bench.py  metrics_flow_probe.py  metrics_probe.py  search_probe.py  test_add_to_collection.py  test_auth.py  test_chunking_security_fixes.py  test_ci_environment.py  test_contracts.py  test_document_api.py  test_document_view.py  test_document_viewer.js  test_document_viewer.py  test_document_viewer_memory.js  test_document_viewer_simple.py  test_embedding.py  test_embedding_context_managers.py  test_embedding_full_integration.py  test_embedding_integration.py  test_embedding_oom_handling.py  test_embedding_performance.py  test_embedding_service.py  test_embedding_service_simple.py  test_embedding_thread_safety.py  test_extraction.py  test_health_endpoints.py  test_hybrid_search.py  test_internal_api.py  test_maintenance_service.py  test_memory_issue.py  test_metrics.py  test_metrics_direct.py  test_metrics_flow.py  test_metrics_update.py  (+17 more)
tickets/: 1-delete-auth-audit.md  1-list-view-badges.md  1_chunking_stack_consolidation.md  2-arrays-etag-caching.md  2-docs-update.md  2-invalidation-ux-consistency.md  2-telemetry-events.md  2-visualize-feature-flag.md  2_packaging_session_and_config_purity.md  3-color-by-fast-path.md  3-selection-drawer-actions.md  3_qdrant_manager_unification.md  4_search_service_modularization.md  5-backend-tests.md  5-frontend-tests.md  5-idempotent-recompute-metadata-hash.md  5_frontend_realtime_and_highlighting.md  6_repo_hygiene_and_artifacts_cleanup.md  ENG-002.txt  ENG-004.txt  ENG-010.txt  (+12 more)
(+1563 files in other folders)
